# MQuery

./: .gitignore  Cargo.toml  README.md
migrations/2021-03-16-103613_create_messages/: up.sql
migrations/2021-03-16-225236_timestamp_not_null/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
